6/solution/api-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-network-policy
spec:
  podSelector:
    matchLabels:
      app: api
  policyTypes:
  - Egress
  - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: nginx
      ports:
        - port: 3333
          protocol: TCP
  egress:
  - to:
    - ipBlock:
        cidr: 216.58.208.35/32
    ports:
      - port: 443
        protocol: TCP
  - to:
    ports:
      - port: 53
        protocol: TCP
      - port: 53
        protocol: UDP
