6/solution/nginx-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-network-policy
spec:
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: api
    ports:
      - port: 3333
        protocol: TCP
  - to:
    ports:
      - port: 53
        protocol: TCP
      - port: 53
        protocol: UDP
